rewrote basic at infrastructure in an object orientated and cleaner way

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,6 @@ build_flags = -D SERIAL_RX_BUFFER_SIZE=512
 src_filter = ${env.src_filter} +<mains/http_server.cc> +<../http/*.h>
 build_flags = -D SERIAL_RX_BUFFER_SIZE=512
 
-[env:http_sse]
-src_filter = ${env.src_filter} +<mains/http_server.cc> +<../http/*.h>
+[env:AT_rewrite]
+src_filter = ${env.src_filter} +<mains/AT_rewrite.cc> +<../http/*.h>
 build_flags = -D SERIAL_RX_BUFFER_SIZE=512
