structured bindings not working

--- a/platformio.ini
+++ b/platformio.ini
@@ -32,4 +32,6 @@ build_flags = -D SERIAL_RX_BUFFER_SIZE=512
 
 [env:AT_rewrite]
 src_filter = ${env.src_filter} +<mains/AT_rewrite.cc> +<../http/*.h>
-build_flags = -D SERIAL_RX_BUFFER_SIZE=512
+build_unflags = -std=gnu++11
+build_flags = -std=gnu++17
+              -D SERIAL_RX_BUFFER_SIZE = 512
