Bring in a newer compiler for c++17. Remove header files from src_filter

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 
 [env]
 platform = atmelavr
+platform_packages = toolchain-atmelavr@>1.7
 board = megaatmega2560
 framework = arduino
 src_filter = +<*.cpp> +<*.cc> +<*.c> -<mains/*>
@@ -25,13 +26,12 @@ src_filter = ${env.src_filter} +<mains/remote_control.cpp>
 src_filter = ${env.src_filter} -<*.cpp> -<*.cc> +<mains/serial_passthrough.cc>
 build_flags = -D SERIAL_RX_BUFFER_SIZE=512
 
-
 [env:http_server]
-src_filter = ${env.src_filter} +<mains/http_server.cc> +<../http/*.h>
+src_filter = ${env.src_filter} +<mains/http_server.cc>
 build_flags = -D SERIAL_RX_BUFFER_SIZE=512
 
 [env:AT_rewrite]
-src_filter = ${env.src_filter} +<mains/AT_rewrite.cc> +<../http/*.h>
+src_filter = ${env.src_filter} +<mains/AT_rewrite.cc>
 build_unflags = -std=gnu++11
-build_flags = -std=gnu++17
-              -D SERIAL_RX_BUFFER_SIZE = 512
+build_flags = -std=c++17
+              -D SERIAL_RX_BUFFER_SIZE=512
