commit to save work

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,9 +19,6 @@ src_filter = +<*.cpp> +<*.cc> +<*.c> -<mains/*>
 [env:steer_p]
 src_filter = ${env.src_filter} +<mains/steer_p.cpp>
 
-[env:remote_control]
-src_filter = ${env.src_filter} +<mains/remote_control.cpp>
-
 [env:serial_passthrough]
 src_filter = ${env.src_filter} -<*.cpp> -<*.cc> +<mains/serial_passthrough.cc>
 build_flags = -D SERIAL_RX_BUFFER_SIZE=512
@@ -32,6 +29,13 @@ build_flags = -D SERIAL_RX_BUFFER_SIZE=512
 
 [env:AT_rewrite]
 src_filter = ${env.src_filter} +<mains/AT_rewrite.cc>
+build_unflags = -std=gnu++11
+build_flags = -std=c++17
+              -D SERIAL_RX_BUFFER_SIZE=512
+
+
+[env:remote_control]
+src_filter = ${env.src_filter} +<mains/remote_control.cpp>
 build_unflags = -std=gnu++11
 build_flags = -std=c++17
               -D SERIAL_RX_BUFFER_SIZE=512
